<resources>
    <string name="app_name">智慧城市</string>
    <string name="dns">http://124.93.196.45</string>
    <string name="default_port">10001</string>

    <string name="common_error_net">网络异常,请检查网络连接！</string>
    <string name="common_error_net_time_out">网络超时</string>
    <string name="common_error_do_something_fail">操作异常</string>
    <string name="common_error_request">请求错误</string>
    <string name="common_error_server">服务器错误</string>
    <string name="common_error_server_json">服务器错误:Json格式错误</string>
    <string name="go_to_main">进入主页</string>
    <string name="internet_setting">网络设置</string>
    <string name="ip_address">IP地址</string>
    <string name="port">端口</string>
    <string name="define">确定</string>
    <string name="cancel">取消</string>
    <string name="activity_start_tip">乐享智慧生活</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_news">搜索资讯</string>
    <string name="search">搜索</string>
    <string name="news">新闻资讯</string>
    <string name="user_info">点击查阅个人信息</string>
    <string name="user_name">账户</string>
    <string name="login_in">登录</string>
    <string name="login_up">注册</string>
    <string name="to_login_up">没有账号？点我注册</string>
    <string name="to_login_in">已有账号？点我登录</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex">性别</string>
    <string name="my_order">我的订单</string>
    <string name="update_pass_word">修改密码</string>
    <string name="feedback">意见反馈</string>
    <string name="sign_out">退出登录</string>
    <string name="please_sign_in">请先登录</string>
    <string name="update_user_info">修改个人信息</string>
    <string name="nickname">昵称</string>
    <string name="email">邮箱</string>
    <string name="id_card">身份证</string>
    <string name="tel">手机号</string>
    <string name="to_bottom">到底啦~</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="update_password">修改密码</string>
    <string name="fb_title">反馈标题</string>
    <string name="fb_content">反馈内容</string>
    <string name="search_service">搜索服务</string>
</resources>