<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.MineStoreFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:animateLayoutChanges="true">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_alignParentBottom="true"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                android:animateLayoutChanges="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textColor="@color/gray_text"
                    android:gravity="center"
                    android:text="@string/please_sign_in"
                    android:id="@+id/gotoLogin"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:id="@+id/userIconLayout"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/userIcon"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@mipmap/ic_launcher" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/userIconLayout"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:id="@+id/userLayout"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"
                    android:layout_weight="1"
                    android:id="@+id/userName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:text="@string/user_info"
                    android:layout_weight="1"
                    android:id="@+id/gotoUserInfo"/>

            </LinearLayout>

        </RelativeLayout>
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_text"
                    android:id="@+id/myOrder"
                    android:text="@string/my_order"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_text"
                    android:id="@+id/updatePassWord"
                    android:text="@string/update_pass_word"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_text"
                    android:id="@+id/feedback"
                    android:text="@string/feedback"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_text"
                    android:text="@string/sign_out"
                    android:id="@+id/signOut"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>